# pcl_first_experiments

data/: screenshot-1467894446.cam
euclidean_cluster_extraction/: CMakeLists.txt  cluster_extraction.cpp
planar_segmentation/: CMakeLists.txt  planar_segmentation.cpp
planar_segmentation_cv_yaml/: CMakeLists.txt  planar_segmentation.cpp
surface_normals/: CMakeLists.txt  example_normal_estimation.cpp
